[5th exercise] Added Factories in observers